# larc2020-VM-Files

./: README.md  run.sh
detection-results/: 0.txt  1.txt  10.txt  100.txt  1000.txt  1001.txt  1002.txt  1003.txt  1004.txt  1005.txt  1006.txt  1007.txt  1008.txt  1009.txt  101.txt  1010.txt  1011.txt  1012.txt  1014.txt  1015.txt  1016.txt  1017.txt  1018.txt  1019.txt  102.txt  1020.txt  1021.txt  1022.txt  1023.txt  1024.txt  1025.txt  1026.txt  1027.txt  1028.txt  1029.txt  103.txt  1030.txt  1031.txt  1032.txt  1033.txt  (+2846 more)
inference/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  28.txt  29.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
run_final_inference/: CMakeLists.txt  inference.cpp  model_loader.cpp
sample_data/annotations/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
test_data/annotations/: 0.txt  1.txt  10.txt  100.txt  1000.txt  1001.txt  1002.txt  1003.txt  1004.txt  1005.txt  1006.txt  1007.txt  1008.txt  1009.txt  101.txt  1010.txt  1011.txt  1012.txt  1013.txt  1014.txt  1015.txt  1016.txt  1017.txt  1018.txt  1019.txt  102.txt  1020.txt  1021.txt  1022.txt  1023.txt  1024.txt  1025.txt  1026.txt  1027.txt  1028.txt  1029.txt  103.txt  1030.txt  1031.txt  1032.txt  (+2860 more)
unbeatables/Larc2020/: CMakeLists.txt  README.md  inference_time.cpp  model_loader.cpp
unbeatables/dataset/LARC2020/: ground_truth.csv
unbeatables/paulo_inference_test/new_inference_test/: csv_reader.hpp  inference.cpp
unbeatables/test_inference/: CMakeLists.txt  inference.cpp  model_loader.cpp  model_loader.hpp
